--- a/src/GUI/panelMenu.form
+++ b/src/GUI/panelMenu.form
@@ -54,6 +54,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Score personal"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="playBtn">
       <Properties>
